# PAWS-Quadruped-Robot

./: README.md
frame_broadcast/: CMakeLists.txt  package.xml
frame_broadcast/launch/: frame_broadcast.launch
frame_broadcast/src/: frame_broadcast.py
paws_description/: CMakeLists.txt  package.xml
paws_description/config/: paws_control.yaml
paws_description/launch/: paws_control.launch  paws_gazebo.launch  paws_rviz.launch
paws_description/meshes/: base_link.stl  lf_link1.stl  lf_link2.stl  lf_link3.stl  lh_link1.stl  lh_link2.stl  lh_link3.stl  rf_link1.stl  rf_link2.stl  rf_link3.stl  rh_link1.stl  rh_link2.stl  rh_link3.stl
paws_description/msg/: Phase.msg
paws_description/rviz/: paws.rviz
paws_description/urdf/: materials.xacro  paws.gazebo  paws.xacro
paws_gait/: CMakeLists.txt  package.xml
paws_gait/launch/: walk.launch
paws_gait/src/: foot_trajectory_generation.py
paws_kinematics/: CMakeLists.txt  package.xml
paws_kinematics/launch/: inverse_kinematics.launch  walk.launch  whole_body_control.launch
paws_kinematics/msg/: Joints.msg
paws_kinematics/src/: dummy_body_pose_pub.py  dummy_foot_pose_pub.py  dummy_phase_pub.py  inverse_kinematics.py  paws_node.py  paws_node_copy.py  whole_body_control.py
paws_motor_control/: CMakeLists.txt  package.xml
paws_motor_control/launch/: motor_control.launch
paws_motor_control/src/: dummy_joint_angle_pub.py  motor_control_gazebo.py  motor_control_rviz.py
